Change log for iftop
$Id$

Attributions apply to all preceding items up to the next blank line.
Unattributed items are by Paul Warren and Chris Lightfoot.

0.15
* Added linear bar scales (default) ("L")
* Added fixed upper limit for bandwidth
* Choose which average bars display ("B")

* Fixed the search for libpcap in the configure script
    Thomas Schwinge <tschwinge@gmx.net>

0.14 06/09/03
* Added forking resolver as fall-back resolver
* Fixed DNS resolution so that no lookups are done if options.dns_resolution ==
  0
* Configure/compilation fixes for Mac OS X 

* MacOS interfaces to avoid by default
    Siri Dhyan Singh <sirid@positivemind.com>

0.13 11/06/03

* Fixed configure.in to properly specify libraries without the leading -l
* Separated the IP/ethernet identifying routine from iftop.c into addrs_ioctl.c
* Added addrs_dlpi.c, dlcommon.c, dlcommon.h to support the STREAMS DataLink
  Programming Interface on Solaris
* Hacked options.h, options.c, iftop.c to enable promiscuous_but_choosy mode
  which runs the interface in promiscuous mode but filters out non-broadcast
  packets not addressed to or from the interface
* Added NEWS, AUTHORS, ChangeLog
* Improved interface auto-detect logic in iftop.c
* Fixed configure.in to not overload prefix in the pcap test section
    Jonathan Abbey <jonabbey@ganymeta.org>

* Made errors during IP/MAC address discovery non-fatal
* Added cummulative line totals ("T")

0.12 21/05/03

* Added 1-line display options ("t")
* Added display scrolling ("j", "k")
* Fixed code for obtaining hardware address (on Linux at least)
* Added IP-based direction assignment

0.11 08/01/03

* Added support for token ring networks
* Token ring network direction determination
    Martin Garton <Martin.Garton@DCSTRANS.COM>

* Added autoconf/automake build system
* Improved network interface auto selection

0.10 29/10/02

* User selectable sort criteria
* On-the-fly filter code changes
* Shell escape
* Alternative resolver back-ends